tests/error/match/types.mml

let f x =
  match x with 
  | true -> true
  | false -> 2
in f true
